@@ -2,18 +2,22 @@ package io.hawt.web.auth;
 
 import java.io.IOException;
 import java.io.OutputStream;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import javax.servlet.Filter;
+import javax.servlet.FilterChain;
+import javax.servlet.FilterConfig;
+import javax.servlet.ServletContext;
+import javax.servlet.ServletException;
+import javax.servlet.ServletRequest;
+import javax.servlet.ServletResponse;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import javax.servlet.http.HttpSession;
 
-import jakarta.servlet.Filter;
-import jakarta.servlet.FilterChain;
-import jakarta.servlet.FilterConfig;
-import jakarta.servlet.ServletException;
-import jakarta.servlet.ServletRequest;
-import jakarta.servlet.ServletResponse;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
-import jakarta.servlet.http.HttpSession;
-
+import io.hawt.system.HawtioProperty;
+import io.hawt.util.Strings;
 import io.hawt.web.ServletHelpers;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -24,37 +28,31 @@ import org.slf4j.LoggerFactory;
  */
 public class SessionExpiryFilter implements Filter {
 
-    private static final Logger LOG = LoggerFactory.getLogger(SessionExpiryFilter.class);
-
-    /**
-     * Hawtio system property:
-     * The name of the servlet context attribute holding hawtio deployment path
-     * relative to the context root. By default, when hawtio is launched in
-     * stand-alone mode, its path is assumed to be at the root of the servlet. But
-     * in certain scenarios this might not be the case. For example, when running
-     * under Spring Boot, actual hawtio path can potentially consist of servlet
-     * prefix, management context path as well as hawtio endpoint path.
-     */
-    public static final String SERVLET_PATH = "hawtioServletPath";
+    private static final transient Logger LOG = LoggerFactory.getLogger(SessionExpiryFilter.class);
 
     public static final String ATTRIBUTE_LAST_ACCESS = "LastAccess";
 
-    private static final List<String> IGNORED_PATHS = List.of("jolokia", "proxy");
+    private static final List<String> IGNORED_PATHS = Collections.unmodifiableList(Arrays.asList("jolokia", "proxy"));
 
+    private ServletContext context;
     private AuthenticationConfiguration authConfiguration;
     private int pathIndex;
 
     @Override
     public void init(FilterConfig filterConfig) throws ServletException {
-        authConfiguration = AuthenticationConfiguration.getConfiguration(filterConfig.getServletContext());
+        context = filterConfig.getServletContext();
+        authConfiguration = AuthenticationConfiguration.getConfiguration(context);
 
-        this.pathIndex = ServletHelpers.hawtioPathIndex(filterConfig.getServletContext());
+        String servletPath = (String) filterConfig.getServletContext().getAttribute(HawtioProperty.SERVLET_PATH);
+        if (servletPath == null) {
+            this.pathIndex = 0; // assume hawtio is served from root
+        } else {
+            this.pathIndex = Strings.webContextPath(servletPath).replaceAll("[^/]+", "").length();
+        }
     }
 
     @Override
     public void doFilter(ServletRequest servletRequest, ServletResponse servletResponse, FilterChain filterChain) throws IOException, ServletException {
-        LOG.trace("Applying {}", getClass().getSimpleName());
-
         if (servletRequest instanceof HttpServletRequest
             && servletResponse instanceof HttpServletResponse) {
             process((HttpServletRequest) servletRequest, (HttpServletResponse) servletResponse, filterChain);
@@ -63,8 +61,8 @@ public class SessionExpiryFilter implements Filter {
         }
     }
 
-    private void writeOk(HttpServletResponse response) throws IOException {
-        response.setContentType("text/plain;charset=UTF-8");
+    private void writeOk(HttpServletResponse response) throws IOException, ServletException {
+        response.setContentType("text/html;charset=UTF-8");
         try (OutputStream out = response.getOutputStream()) {
             out.write("ok".getBytes());
             out.flush();
@@ -77,37 +75,67 @@ public class SessionExpiryFilter implements Filter {
     }
 
     private void process(HttpServletRequest request, HttpServletResponse response, FilterChain chain) throws IOException, ServletException {
+        if (context.getAttribute(AuthenticationConfiguration.AUTHENTICATION_ENABLED) == null) {
+            // most likely the authentication filter hasn't been started up yet, let this request through and it can be dealt with by the authentication filter
+            chain.doFilter(request, response);
+            return;
+        }
+
         HttpSession session = request.getSession(false);
+        boolean enabled = (boolean) context.getAttribute(AuthenticationConfiguration.AUTHENTICATION_ENABLED);
         final RelativeRequestUri uri = new RelativeRequestUri(request, pathIndex);
         LOG.debug("Accessing [{}], hawtio path is [{}]", request.getRequestURI(), uri.getUri());
 
         // pass along if it's the top-level context
         if (uri.getComponents().length == 0) {
             if (session != null) {
-                updateLastAccess(session, now());
+                long now = System.currentTimeMillis();
+                updateLastAccess(session, now);
             }
             chain.doFilter(request, response);
             return;
         }
 
         String subContext = uri.getComponents()[0];
-        if (session == null || session.getMaxInactiveInterval() < 0 || "auth/logout".equals(uri.getUri())) {
-            if (subContext.equals("refresh")) {
-                if (!authConfiguration.isEnabled()) {
-                    LOG.debug("Authentication disabled, received refresh response, responding with ok");
-                } else if (session == null) {
-                    // authentication performed outside of LoginServlet (no session created)
-                    LOG.debug("No session available, responding with ok");
-                }
+        if (session == null || session.getMaxInactiveInterval() < 0) {
+            if (subContext.equals("refresh") && !enabled) {
+                LOG.debug("Authentication disabled, received refresh response, responding with ok");
                 writeOk(response);
             } else {
                 chain.doFilter(request, response);
+                /*
+                if (!enabled) {
+                    LOG.debug("Authentication disabled, allowing request");
+                    chain.doFilter(request, response);
+                } else if (request.getHeader(Authenticator.HEADER_AUTHORIZATION) != null) {
+                    // there's no session, but we have request with authentication attempt
+                    // let's pass it further the filter chain - if authentication will fail, user will get 403 anyway
+                    chain.doFilter(request, response);
+                } else {
+                    if (noCredentials401 && subContext.equals("jolokia")) {
+                        LOG.debug("Authentication enabled, noCredentials401 is true, allowing request for {}",
+                            subContext);
+                        chain.doFilter(request, response);
+                    } else if (subContext.equals("jolokia") ||
+                        subContext.equals("proxy") ||
+                        subContext.equals("user") ||
+                        subContext.equals("exportContext") ||
+                        subContext.equals("contextFormatter") ||
+                        subContext.equals("upload")) {
+                        LOG.debug("Authentication enabled, denying request for {}", subContext);
+                        ServletHelpers.doForbidden(response);
+                    } else {
+                        LOG.debug("Authentication enabled, but allowing request for {}", subContext);
+                        chain.doFilter(request, response);
+                    }
+                }
+                */
             }
             return;
         }
 
         int maxInactiveInterval = session.getMaxInactiveInterval();
-        long now = now();
+        long now = System.currentTimeMillis();
         if (session.getAttribute(ATTRIBUTE_LAST_ACCESS) != null) {
             long lastAccess = (long) session.getAttribute(ATTRIBUTE_LAST_ACCESS);
             long remainder = (now - lastAccess) / 1000;
@@ -140,10 +168,4 @@ public class SessionExpiryFilter implements Filter {
     public void destroy() {
         // noop
     }
-
-    protected long now() {
-        // easier testing...
-        return System.currentTimeMillis();
-    }
-
 }
